Set created_at date column width

--- a/src/app/components/tweets-table/tweets-table.component.html
+++ b/src/app/components/tweets-table/tweets-table.component.html
@@ -3,14 +3,17 @@
     <ng-container
       *ngFor='let column of tableOptions.columnDefs'
       [cdkColumnDef]='column.columnDef'>
-      <md-header-cell *cdkHeaderCellDef md-sort-header> {{column.headName}} </md-header-cell>
-      <md-cell *cdkCellDef="let row" [ngSwitch]="column.columnDef">
+      <md-header-cell *cdkHeaderCellDef md-sort-header
+                      [ngClass]="column.columnDef === 'created_at' ? 'created-at': ''">
+        {{column.headName}}
+      </md-header-cell>
+      <md-cell *cdkCellDef="let row" [ngSwitch]="column.columnDef"
+               [ngClass]="column.columnDef === 'created_at' ? 'created-at': ''">
         <a *ngSwitchCase="'text'" href="{{row['tweet_url']}}">{{row[column.columnDef]}}</a>
         <span *ngSwitchCase="'retweeted_by'">
           <a *ngIf="row['retweeted_by']; else elseBlock"
              href="{{row['retweeted_user_profile_url']}}">{{row['retweeted_by']}}</a>
           <ng-template #elseBlock>Not retweeted</ng-template>
-          <!--<a *ngIf="" href="{{row['retweeted_user_profile_url']}}">{{row['retweeted_by']}}</a>-->
         </span>
         <span *ngSwitchDefault>{{row[column.columnDef]}}</span>
       </md-cell>
