--- a/src/app/components/tweets-table/tweets-table.component.sass
+++ b/src/app/components/tweets-table/tweets-table.component.sass
@@ -17,6 +17,5 @@
     overflow: initial
     max-height: 100vh
 
-    //md-row
-    //  .mat-cell a
-    //    text-overflow: ellipsis
+.created-at
+  flex: 0 0 115px
