--- a/src/app/components/tweets-table/tweets-table.component.sass
+++ b/src/app/components/tweets-table/tweets-table.component.sass
@@ -17,5 +17,13 @@
     overflow: initial
     max-height: 100vh
 
+  md-cell
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
+
 .created-at
   flex: 0 0 115px
+
+.retweeted-by
+  flex: 0 0 150px
