--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,17 +1,31 @@
 .settings
+  margin: 15px
+  display: flex
+  flex-direction: row
+  align-items: center
+  flex-wrap: wrap
+  justify-content: flex-start
+
   mat-input-container,
   md-select
     padding-left: 15px
-
   md-icon
     cursor: pointer
 
   #refreshTweetsButton
     width: 45px
 
-  //md-card
-  //  height: 100vh
-
   md-chip-list.columns
     display: flex
     flex-direction: column
+
+  div.page-size
+    display: flex
+    flex-direction: row
+
+  @media screen and (max-width: 589px)
+    flex-direction: column
+    align-items: flex-start
+    mat-input-container,
+    md-select
+      padding-bottom: 25px
