Update link color

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -26,7 +26,7 @@ $background:   map-get($dark-theme, background)
   background-color: mat-color($background, card)
 
 a:hover, a:visited, a:link, a:active
-  color: rgb(29, 161, 242)
+  color: #607d8b
   text-decoration: none
 
   &:hover
