--- a/src/app/components/mentions-dialog/mentions-dialog.component.html
+++ b/src/app/components/mentions-dialog/mentions-dialog.component.html
@@ -1,4 +1,11 @@
-<label>mentions</label>
-<md-nav-list>
-  <a md-list-item href="{{mention.profile_url}}" *ngFor="let mention of mentions"> {{ mention.name }} </a>
-</md-nav-list>
+<h2 md-dialog-title>Mentions</h2>
+<md-dialog-content>
+  <md-nav-list>
+    <a md-list-item href="{{mention.profile_url}}" *ngFor="let mention of mentions"> {{ mention.name }} </a>
+  </md-nav-list>
+</md-dialog-content>
+<md-dialog-actions>
+  <button md-raised-button color="primary" (click)="dialogRef.close()">
+    Close
+  </button>
+</md-dialog-actions>
